Current Version
---------------

Tue Dec 28 21:39:50 MET 1999
tobi:
- Fixed bug on Unix that could, in the situation that a nodelist and two 
  consequent nodediffs were found, lead to the situation that only the
  first nodediff was applied, but not the second one. (On a consecutive
  run, though, of course the second one was also applied).

Tue Dec 28 19:25:59 MET 1999
ml:
- Removed some unnecessary variables
- Added makefile for Watcom C for Windows

Tue 30 Nov 1999 22:10:01 CET
sms:
- fixed some misuses of ++ in ulcomp.c
(Remark by TE: I don't think those caused any problems, they were both
 ANSI and K&R proofed)

NLTOOLS 1.0 Public Release
--------------------------

Sun 28 Nov 1999 03:00:00 CET
tobi:
- lots of last minute bug fixes, cleaned up everything, prepared for release

Di  16 Nov 1999 23:19:07 CET
tobi:
- fixed problem that only occured with IBM C compilers.
	
Wed Oct 13 10:49:05 MET DST 1999 
mtt:
- fixed makefile.sun
- added include of stddef.h (where size_t is defined) to string.c

Wed Oct 13 10:31:36 MET DST 1999
mtt:
- fixed typo in linux makefile
- added sun makefile
- removed nldiff binary :-)

Mo  11 Okt 1999 00:20:20 CEST
- Fixed the sort routine. It was buggy and slow, so I replaced it with
  the brute force method (read everything into RAM) until I find time to
  do it better.
- added Points24 support
- revised documentation

Fri Oct  8 19:31:06 MET DST 1999 (tobi)
- first version in CVS
- contains nldiff, nlcrc, ulc
- ulc is still very slow due to broken sort routine
- nlupdate still missing

	 